feat: add migration script for database management

--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "db:generate": "dotenv -e .env.local -- drizzle-kit generate",
     "db:migrate": "dotenv -e .env.local -- drizzle-kit migrate",
     "db:push": "dotenv -e .env.local -- drizzle-kit push",
-    "db:studio": "dotenv -e .env.local -- drizzle-kit studio"
+    "db:studio": "dotenv -e .env.local -- drizzle-kit studio",
+    "migrate": "dotenv -e .env.local -- tsx scripts/migrate.ts"
   },
   "dependencies": {
     "@clerk/nextjs": "^6.34.5",
