--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "resend": "^6.4.2",
+    "sonner": "^2.0.7",
     "svix": "^1.81.0",
     "tailwind-merge": "^2.6.0",
     "zod": "^3.24.4"
